Fix CWE-78 OS command injection in training command endpoint.
Replace shell-concatenated Runtime.exec with host allowlisting and ProcessBuilder argument arrays to prevent remote code execution via the host query parameter.